# triage-robot

./: .gitignore  BACKLOG.md  LICENSE  PUBLISHING.md  README.md  VALIDATION.md  make_test_bag.py  pyproject.toml  triage.example.yaml
.github/workflows/: publish.yml
robot_triage/: __init__.py  cli.py  config.py  events.py  reader.py  replay.py  util.py
robot_triage/detectors/: __init__.py  base.py  divergence.py  dropout.py  error_burst.py  freeze.py  jump.py  range_check.py
robot_triage/report/: __init__.py  html.py  text.py
tests/: test_config.py  test_detectors.py  test_dropout.py  test_edge_cases.py  test_replay.py
