[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-triage"
version = "0.1.0"
description = "Triage robot logs (.mcap/.bag) for common-sense failures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vansh Chhabra", email = "vansh.chhabra343@gmail.com" }]
dependencies = [
    "mcap>=1.1",
    "rosbags>=0.9",
    "pyyaml>=5.0",
]

[project.optional-dependencies]
ros2 = ["mcap-ros2-support>=0.5"]
dev = ["pytest>=7.0"]

[project.scripts]
triage = "robot_triage.cli:main"

[tool.setuptools.packages.find]
include = ["robot_triage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
